--- a/style.css
+++ b/style.css
@@ -20,14 +20,18 @@ body {
 
 div:not(#main) {
     font-family: pixel;
-    height: 14px;
+    height: calc(100vh / 60);
+    line-height: 0;
+    margin: 0;
+    margin-top: calc(-100vh / 480);
+    padding: 0;
 }
 
 #main {
     position: absolute;
     top: 0;
     left: 0;
-    transform: scale(0.75, 1) translate(-16.666%, 0) translate(10.5px, 14px);
+    transform: scale(0.75, 1) translate(-16.666%, 0) translate(9px, 12px);
 }
 
 span {
@@ -36,4 +40,5 @@ span {
     padding: 0;
     margin-right: -1px;
     margin-top: -1px;
+    font-size: calc(100vh / 60);
 }
