--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ span {
     line-height: 0;
     margin: 0;
     padding: 0;
-    margin-right: -1px;
-    margin-top: -1px;
+    margin-top: calc(-100vh / 480);
+    margin-right: calc(-100vh / 480);
     font-size: calc(100vh / 60);
 }
